<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Noque</string>
    <string name="action_settings">Settings</string>
    <string name="start_subtitle">이젠 기다리지 말고 노크하세요.</string>
    <string name="start_btn_new_user">신규 사용자</string>
    <string name="start_btn_existing">기존 사용자</string>
    <string name="logon_title">휴대폰 번호 등록</string>
    <string name="logon_edit_phone">핸드폰 번호</string>
    <string name="logon_edit_name">이름</string>
    <string name="logon_edit_password">비밀번호</string>
    <string name="logon_edit_re_password">비밀번호 확인</string>
    <string name="logon_error_edit_name">이름을 입력해 주세요.</string>
    <string name="logon_error_edit_password">암호는 최소한 8자리 이상으로 입력해 주십시오.</string>
    <string name="logon_error_re_password">암호가 일치하지 않습니다.</string>
    <string name="logon_error_edit_phone">핸드폰 번호를 - 를 빼고 총 11자리로 입력해 주십시오.</string>
    <string name="login_title">핸드폰 번호 로그인</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_edit_phone">핸드폰 번호</string>
    <string name="login_edit_password">비밀번호</string>
    <string name="login_btn_submit">로그인</string>
    <string name="action_tickets">티켓 목록</string>
    <string name="action_new_ticket">새 티켓</string>
    <string name="action_ticket_history">즐겨찾기</string>
    <string name="title_activity_user_store"></string>
    <string name="action_location">현재 위치</string>
    <string name="action_store_search">스토어 검색</string>
    <string name="title_activity_user_store_detail">하동관</string>
    <string name="hello_world">Hello world!</string>

</resources>
