<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_material_light"
    tools:context="com.doleestudio.noque.LogonFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="40dp"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_color"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:width="300dp"
                android:background="@drawable/round_edit_text"
                android:ems="10"
                android:hint="@string/login_edit_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/login_edit_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edit_text"
                android:ems="10"
                android:hint="@string/login_edit_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/login_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_button"
                android:text="@string/login_btn_submit"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
